--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <img src="https://play.pokemonshowdown.com/sprites/xyani/tyranitar.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/mantine.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/haxorus.gif">
+<img src="https://play.pokemonshowdown.com/sprites/xyani/goodra.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/forretress.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/comfey.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/klinklang.gif">
