--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 <font size="4"><b>Newmew21</b></font>
 <img src="https://play.pokemonshowdown.com/sprites/xyani/kyurem-black.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/kartana.gif">
+<img src="https://play.pokemonshowdown.com/sprites/xyani/tentacruel.gif">
+<img src="https://play.pokemonshowdown.com/sprites/xyani/krookodile.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/necrozma.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/feraligatr.gif">
 <img src="https://play.pokemonshowdown.com/sprites/xyani/miltank.gif">
